Include logback.xml in container
Change-Id: I35919f5aa8ad6db4e0c7e7ca728bfb151328aa7d
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-125

--- a/misc/dmaapbc.properties.tmpl
+++ b/misc/dmaapbc.properties.tmpl
@@ -72,7 +72,7 @@ DB.cred:	${DMAAPBC_PGCRED:-ValueNotSet}
 #
 #	Name of this environment
 #
-DmaapName:	${DMAAPBC_INSTANCE_NAME:-FTLIST}
+DmaapName:	${DMAAPBC_INSTANCE_NAME:-demo}
 #
 #	Name of DR prov server
 #
