Replace SSL certificate
Change-Id: I2284d9a0143061de7abbc26d0817d6b95dd0ebb4
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-485

--- a/misc/dmaapbc.properties.tmpl
+++ b/misc/dmaapbc.properties.tmpl
@@ -21,7 +21,7 @@ IntHttpPort:	${DMAAPBC_INT_HTTP_PORT:-8080}
 #	The port number for https as seen within the server
 #   Set to 0 if no certificate is available yet...
 #
-IntHttpsPort:	${DMAAPBC_INT_HTTPS_PORT:-0}
+IntHttpsPort:	${DMAAPBC_INT_HTTPS_PORT:-8443}
 #
 #	The external port number for https taking port mapping into account
 #
@@ -37,11 +37,11 @@ KeyStoreFile:	${DMAAPBC_KSTOREFILE:-etc/keystore}
 #
 #	The password for the https keystore
 #
-KeyStorePassword:	${DMAAPBC_KSTOREPASS:-changeit}
+KeyStorePassword:	${DMAAPBC_KSTOREPASS:-Demolition Artist Floating}
 #
 #	The password for the private key in the https keystore
 #
-KeyPassword:	${DMAAPBC_PVTKEYPASS:-changeit}
+KeyPassword:	${DMAAPBC_PVTKEYPASS:-Demolition Artist Floating}
 #
 #	The type of truststore for https
 #
