Fix dmaapbc properties
Change-Id: I2f62fe59d9572d5e889db7c758ee4b7b3792065a
Issue-ID: DMAAP-1132
Signed-off-by: piotr.karas <piotr.karas@nokia.com>

--- a/dmaap-bc/misc/dmaapbc.properties.tmpl
+++ b/dmaap-bc/misc/dmaapbc.properties.tmpl
@@ -56,13 +56,13 @@ KeyStoreType:	jks
 #
 KeyStoreFile:	${DMAAPBC_KSTOREFILE:-etc/keystore}
 #
-#	The password for the https keystore
+#	The password for the https keystore (remember to put password in "" and escape $ characters)
 #
-KeyStorePassword:	${DMAAPBC_KSTOREPASS:-*j&Z*Ma;.4My4M]W0eB*fal$}
+KeyStorePassword:	${DMAAPBC_KSTOREPASS:-"Y@Y5f&gm?PAz,CVQL,lk[VAF"}
 #
-#	The password for the private key in the https keystore
+#	The password for the private key in the https keystore (remember to put password in "" and escape $ characters)
 #
-KeyPassword:	${DMAAPBC_PVTKEYPASS:-*j&Z*Ma;.4My4M]W0eB*fal$}
+KeyPassword:	${DMAAPBC_PVTKEYPASS:-"Y@Y5f&gm?PAz,CVQL,lk[VAF"}
 #
 #	The type of truststore for https
 #
@@ -72,9 +72,9 @@ TrustStoreType:	jks
 #
 TrustStoreFile:	${DMAAPBC_TSTOREFILE:-etc/org.onap.dmaap-bc.trust.jks}
 #
-#	The password for the https truststore
+#	The password for the https truststore (remember to put password in "" and escape $ characters)
 #
-TrustStorePassword:	${DMAAPBC_TSTOREPASS:-pi8HuuSbN03MtQQ7(5TcyQ6;}
+TrustStorePassword:	${DMAAPBC_TSTOREPASS:-"8b&R5%l\$l:@jSWz@FCs;rhY*"}
 #
 #	The path to the file used to trigger an orderly shutdown
 #
