AllowAll api policy added
Change-Id: Idf191809302c723b0e18e1c4f9b3c1c712b16919
Issue-ID: DMAAP-1166
Signed-off-by: piotr.karas <piotr.karas@nokia.com>

--- a/dmaap-bc/misc/dmaapbc.properties.tmpl
+++ b/dmaap-bc/misc/dmaapbc.properties.tmpl
@@ -180,12 +180,12 @@ CredentialCodecKeyfile:	${DMAAPBC_CODEC_KEYFILE:-etc/LocalKey}
 # This overrides the Class used for Decryption.
 # This allows for a plugin encryption/decryption method if needed.
 # Call this Class for decryption at runtime.
-#AafDecryption.Class: com.company.proprietaryDecryptor 
+#AafDecryption.Class: com.company.proprietaryDecryptor
 
 #
 # This overrides the Class used for API Permission check.
 # This allows for a plugin policy check, if needed
-#ApiPermission.Class: com.company.policy.DecisionPolicy
+ApiPermission.Class: org.onap.dmaap.dbcapi.authentication.AllowAll
 
 # Namespace for URI values for API used to create AAF permissions
 # e.g. if ApiNamespace is X.Y..dmaapBC.api then for URI /topics we create an AAF perm X.Y..dmaapBC.api.topics
