Remove baked in certs and use downloaded certs
Issue-ID: DMAAP-1401
Signed-off-by: Ubuntu <dgl@research.att.com>
Change-Id: I4da88a80a79711d2173fb7814adb9f86e7af8739

--- a/dmaap-bc/misc/havecert.tmpl
+++ b/dmaap-bc/misc/havecert.tmpl
@@ -21,12 +21,20 @@
 #
 #
 cat <<!EOF
+echo Check for certificate
 TZ=GMT0
 cd /opt/app/dmaapbc;
-if [ -f ${DMAAPBC_KSTOREFILE:-etc/keystore} ]
+KEYSTORE=${DMAAPBC_KSTOREFILE:-etc/keystore}
+echo "KEYSTORE=$KEYSTORE"
+d=`dirname $KEYSTORE`
+ls -l $d
+if [ -f ${KEYSTORE} ]
 then
+	echo "Goodness: Found ${KEYSTORE}"
 	exit 0
 fi
-echo `date '+%F %T,000'` WARN Certificate file "${DMAAPBC_KSTOREFILE:-etc/keystore}" is missing >>${DMAAPBC_LOGS:-logs}/dmaapbc.log
+EMSG="`date '+%F %T,000'` WARN Certificate file $KEYSTORE is missing"
+echo $EMSG
+echo $EMSG >>${DMAAPBC_LOGS:-logs}/dmaapbc.log
 exit 1
 !EOF
